<resources>
    <string name="app_name">Exodus</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_reload_board">Reload board</string>
    <string name="action_reload_thread">Reload thread</string>
    <string name="action_pin">Pin</string>
    <string name="action_reply">Reply</string>
    <string name="action_reply_board">Reply to board</string>
    <string name="action_reply_thread">Reply to thread</string>
    <string name="action_open_browser">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="action_download_album">Download album</string>
    <string name="action_board_view_mode">View mode</string>
    <string name="action_board_view_mode_list">List</string>
    <string name="action_board_view_mode_grid">Grid</string>
    <string name="action_settings_advanced">Advanced</string>
    <string name="action_search">Search</string>
    <string name="action_search_board">Search board</string>
    <string name="action_search_thread">Search thread</string>
    <string name="action_search_image">Image search</string>
    <string name="action_mod_login_logout">Mod login/logout</string>
    <string name="search_hint">Search posts</string>
    <string name="search_results">Found %1$s %2$s for "%3$s"</string>
    <string name="open_unknown_title">Unsupported link</string>
    <string name="open_unknown">Exodus can\'t open this link. Opening it in your browser instead.</string>
    <string name="open_link_failed">No applications found to open link</string>
    <string name="image_save">Save image</string>
    <string name="image_save_succeeded">Saved image to</string>
    <string name="image_save_failed">Saving image failed</string>
    <string name="image_save_directory_error">Cannot make save directory</string>
    <string name="image_save_not_mounted">Cannot write to storage</string>
    <string name="image_play_state">Start / stop playing</string>
    <string name="image_preview_failed">Failed to show image</string>
    <string name="image_not_found">Image not found</string>
    <string name="image_open_failed">Failed to open image</string>
    <string name="file_open_failed">Failed to open file</string>
    <string name="thread_load_failed_network">No network</string>
    <string name="thread_load_failed_parsing">Server inaccessible</string>
    <string name="thread_load_failed_server">404 not found</string>
    <string name="thread_load_end_of_line">No more posts</string>
    <string name="thread_refresh_bar_inactive">Tap to refresh</string>
    <string name="thread_refresh_now">Loading</string>
    <string name="thread_refresh_countdown">Loading in %1$d</string>
    <string name="thread_load_failed_retry">Retry</string>
    <string name="board_edit">Board editor</string>
    <string name="board_add">Add board</string>
    <string name="board_add_hint">Board code e.g. lit</string>
    <string name="board_add_success">Added board</string>
    <string name="board_add_duplicate">Board already added</string>
    <string name="board_add_unknown_title">Unknown board code</string>
    <string name="board_add_unknown">The board with code %1$s is not known.</string>
    <string name="board_edit_enable_filler">Show filler</string>
    <string name="board_delete">Remove board?</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_pinned">Pinned threads</string>
    <string name="drawer_pinned_delete">Delete pin</string>
    <string name="drawer_pinned_change_title">Edit title</string>
    <string name="one_reply">reply</string>
    <string name="multiple_replies">replies</string>
    <string name="one_image">image</string>
    <string name="multiple_images">images</string>
    <string name="one_post">post</string>
    <string name="multiple_posts">posts</string>
    <string name="post_info">Info</string>
    <string-array name="post_options">
        <item>Quote</item>
        <item>Quote text</item>
        <item>Info</item>
        <item>Show clickables</item>
        <item>Copy text</item>
        <item>Report</item>
    </string-array>
    <string name="post_quick_reply">Quick reply</string>
    <string name="post_highlight_id">Highlight ID</string>
    <string name="post_text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="mod_option_delete">(Mod) Delete</string>
    <string name="mod_option_spoiler_images">(Mod) Spoiler Images</string>
    <string name="mod_option_ban">(Mod) Ban</string>
    <string name="reply">Reply to</string>
    <string name="reply_to_board">Make thread in</string>
    <string name="reply_name">Name</string>
    <string name="reply_email">Options</string>
    <string name="reply_subject">Subject</string>
    <string name="reply_comment">Comment</string>
    <string name="reply_file_name">File name</string>
    <string name="reply_file_too_big">Warning: File size too big (%1$s / %2$s)</string>
    <string name="reply_webm_too_big">Warning: WebM size too big (%1$s / %2$s)</string>
    <string name="reply_spoiler_image">Spoiler image</string>
    <string name="reply_no_preview">No preview available</string>
    <string name="reply_locked_thread">Locked thread</string>
    <string name="reply_insert_spoiler">[spoiler]</string>
    <string name="reply_insert_code">[code]</string>
    <string name="reply_submit">Submit</string>
    <string name="reply_captcha">Enter the text</string>
    <string name="reply_error">Error sending reply</string>
    <string name="reply_error_captcha">Wrong captcha</string>
    <string name="reply_error_file">No file selected</string>
    <string name="reply_success">Post Successful</string>
    <string name="reply_captcha_load_error">Failed to load captcha</string>
    <string name="reply_captcha_tap_to_reload">Tap to reload the captcha</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Delete your post?</string>
    <string name="delete_wait">Deleting post…</string>
    <string name="delete_success">Post deleted</string>
    <string name="delete_password_incorrect">Password incorrect</string>
    <string name="delete_too_soon">You must wait longer before deleting this post</string>
    <string name="delete_too_old">You cannot delete a post this old</string>
    <string name="delete_fail">Error deleting post</string>
    <string name="delete_image_only">Only delete the image</string>
    <string name="folder_pick_ok">Choose</string>
    <string name="preference_board_edit">Edit boards</string>
    <string name="preference_board_edit_summary">Add or remove boards</string>
    <string name="preference_watch_settings">Thread watcher</string>
    <string name="preference_browsing">Browsing</string>
    <string name="preference_posting">Posting</string>
    <string name="preference_theme">Theme</string>
    <string-array name="preference_themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
    </string-array>
    <string-array name="preference_themes_values">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
    </string-array>
    <string name="preference_font">Font size</string>
    <string-array name="preference_fonts">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14 (default)</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="preference_fonts_values">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string name="preference_board_mode">Board mode</string>
    <string-array name="preference_board_modes">
        <item>Catalog</item>
        <item>Paginated</item>
    </string-array>
    <string-array name="preference_board_modes_values">
        <item>catalog</item>
        <item>pages</item>
    </string-array>
    <string name="preference_image_save_location">Image save folder</string>
    <string name="preference_network_https">Use HTTPS</string>
    <string name="preference_image_save_original">Save original filename</string>
    <string name="preference_open_link_confirmation">Ask before opening links</string>
    <string name="preference_autoplay">Start playing videos immediately</string>
    <string name="preference_auto_refresh_thread">Auto refresh threads</string>
    <string name="preference_image_auto_load">Auto load images</string>
    <string name="preference_force_phone_layout">Force phone layout</string>
    <string name="preference_default_name">Default name</string>
    <string name="preference_default_email">Default email</string>
    <string name="preference_pin_on_post">Pin thread on post</string>
    <string name="preference_about">About</string>
    <string name="preference_licenses">Open Source Licenses</string>
    <string name="preference_licences_summary">Legal information about licenses</string>
    <string name="preference_developer">Developer options</string>
    <string name="preference_anonymize">Make everyone Anonymous</string>
    <string name="preference_anonymize_ids">Hide IDs</string>
    <string name="open_link_confirmation">Open link?</string>
    <string name="open_thread_confirmation">Open this thread?</string>
    <string name="open_board_confirmation">Open this board?</string>
    <string name="watch_pause_pins">Stop watching</string>
    <string name="watch_summary_disabled">Off</string>
    <string name="watch_summary_enabled">Watching pinned threads</string>
    <string name="watch_info_text">To watch pins for new posts, turn the thread watcher on.</string>
    <string name="watch_countdown">Show countdown</string>
    <string name="watch_countdown_description">Show a countdown left of the new post counter</string>
    <string name="watch_enable_background">Enable in the background</string>
    <string name="watch_enable_background_description">Watch pins when Exodus is in the background</string>
    <string name="watch_background_timeout_description">Time between loads in background</string>
    <string-array name="watch_background_timeouts">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="watch_background_timeouts_int">
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    <string name="download_confirm">%1$s images will be downloaded to %2$s</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_cancel_button_name">Cancel</string>
    <string name="login_submit_button_name">Submit</string>
    <string name="ban_id_message">Ban user with post number</string>
    <string name="ban_reason_hint">Reason</string>
    <string name="ban_length_hint">Length (eg. "2d1h30m" or "2 days")</string>
    <string name="ban_public_box_text">Public Ban</string>
    <string name="ban_public_message_text">USER WAS BANNED FOR THIS POST</string>
    <string name="ban_submit_button_text">New Ban</string>
    <string name="ban_cancel_button_text">Cancel</string>
</resources>