<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    style="@style/AppTheme"
    tools:context="org.wingy.chan.ui.activity.LoginActivity">

    <EditText
        android:id="@+id/mod_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_label"
        android:minHeight="40dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/mod_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password_label"
        android:minHeight="40dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:text="@string/login_cancel_button_name"
            android:onClick="onCancelButtonClicked"/>

        <Button
            android:id="@+id/login_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:text="@string/login_submit_button_name"
            android:onClick="onSubmitButtonClicked"/>

    </LinearLayout>
</LinearLayout>
